# tabular_view_interview

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  orchestrator.py  queue.py  schemas.py  seed_documents.py  sse.py  tasks.py
backend/app/rag/: __init__.py  build.py  chunker.py  embeddings.py  index.py  search.py
backend/app/routes/: documents.py  tables.py
backend/app/workers/: cell_worker.py
backend/tests/: conftest.py  test_cell_worker.py  test_chunker.py  test_orchestrator.py  test_rag_index.py  test_rag_search.py  test_routes_documents.py  test_routes_tables.py  test_schemas.py  test_seed_documents.py  test_sse.py  test_tasks.py
data/documents/arb_1_vance/: columbia_law_press_release_other_faculty.md  cv_archived.md  dupe_gar_brief_energy_chair.md  industry_newsletter.md  interview_transcript.md  lcia_quarterly_caseload_report.md  news_article.md  nycba_cle_program_2023.md  opinion_or_award.md  panel_announcement.md  tangential_law360_competing_appointment.md  wrong_person_architect.md  wrong_person_folk_singer.md  wrong_person_obituary.md  wrong_person_pediatrician.md
data/documents/arb_2_torres/: aaa_construction_rules_excerpt.md  bar_association_minutes.md  boalt_alumni_other_grads_feature.md  cla_adr_section_minutes.md  (+11 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
(+68 files in other folders)
