[tool.poetry]
name = "async-arbitrator"
version = "0.1.0"
description = "Async Arbitrator Table Fill — Interview Project"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
aiosqlite = "^0.20.0"
openai = "^1.30.0"
tavily-python = "^0.3.0"
python-dotenv = "^1.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
celery = "^5.4.0"
redis = "^5.0.0"
faiss-cpu = "^1.9.0"
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
pytest-mock = "^3.12.0"
respx = "^0.21.0"
fakeredis = "^2.23.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
